--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -2,7 +2,22 @@
 
 <head>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.css">
-
+      <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
   <body>
+    <div>
+    <div class="content">
+    <H3>This website is a showcase of my abilities. The server serving this page,
+      <br>
+      the pages within, the art, the code all of it is my own.
+      <br>
+      -Ent
+
+    <p> This page is under construction, <br>
+      and will be for the next 24 hours. <br>
+      Think of it like a hackathon for dio-ramas <br>
+
+    </p>
+  </div>
+  </div>
