fiddle faddle spawn

--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -6,18 +6,37 @@
   </head>
 
   <body>
-    <div>
-    <div class="content">
+
+        <p> This page is under construction, <br>
+          and will be for the next 24 hours. <br>
+          Think of it like a hackathon for dio-ramas <br>
+        </p>
+<br>
+<br>
+<br>
+<br>
+
+
+
+    <div class="container">
+      <a href="https://gitlab.com/entro-pi/supercut">
+      <div class="picture">
+        <img src="assets/img/bip.png" style="width: 39px;height: 39px;border-radius: 50%;align:left;"></img>
+
+    </a>
+      <div class="text">
+        This website.
+    </div>
+</div>
+  </div>
+  <div>
+        <br>
+        <br>
+        <br>
     <H3>This website is a showcase of my abilities. The server serving this page,
       <br>
       the pages within, the art, the code all of it is my own.
       <br>
       -Ent
 
-    <p> This page is under construction, <br>
-      and will be for the next 24 hours. <br>
-      Think of it like a hackathon for dio-ramas <br>
-
-    </p>
-  </div>
-  </div>
+    </div>
