centered and has to be launched manually

--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -19,16 +19,19 @@
 
 
     <div class="container">
+
       <a href="https://gitlab.com/entro-pi/supercut">
       <div class="picture">
-        <img src="assets/img/bip.png" style="width: 39px;height: 39px;border-radius: 50%;align:left;"></img>
+        <img class="picture" src="assets/img/bip.png"></img>
+      </a>
 
-    </a>
       <div class="text">
-        This website.
+        This website, it is written in Golang, serves http currently and this is
+        a thumbnail embeddable link.
+</div>
     </div>
 </div>
-  </div>
+
   <div>
         <br>
         <br>
