--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -18,7 +18,7 @@
 
 
 
-    <div class="container">
+    <div class="container" draggable="true">
 
       <a href="https://gitlab.com/entro-pi/supercut">
       <div class="picture">
