--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -7,15 +7,16 @@
 
   <body>
 
-        <p> This page is under construction, <br>
-          and will be for the next 24 hours. <br>
-          Think of it like a hackathon for dio-ramas <br>
-        </p>
-<br>
+      
+    <br>
 <br>
 <br>
 <br>
 
+<H1>This is a placeholder website for when I need to duckduckgo
+stuff on stream</H1>
+
+  https://twitch.tv/rainbow_punk_treant
 
 
     <div class="container" draggable="true">
@@ -26,8 +27,7 @@
       </a>
 
       <div class="text">
-        This website, it is written in Golang, serves http currently and this is
-        a thumbnail embeddable link.
+        This website. 
 </div>
     </div>
 </div>
@@ -35,11 +35,7 @@
   <div>
         <br>
         <br>
-        <br>
-    <H3>This website is a showcase of my abilities. The server serving this page,
-      <br>
-      the pages within, the art, the code all of it is my own.
-      <br>
-      -Ent
+
+
 
     </div>
