Ctrl slash comments out a line~~!!!!!

--- a/super/index_feader.html
+++ b/super/index_feader.html
@@ -6,17 +6,27 @@
   </head>
 
   <body>
+<!-- ohaidere, i'm editing this webpage through a livestream, how are you? -->
 
+<!-- DOOOD -->
       
     <br>
 <br>
 <br>
 <br>
 
+
+So basically the & is like no more input! Then the terminal doesn't care if it completes or not. (doesn't add to garbage list?)
+
+So disown retains the ability to write errors to the launching editor
+
+<!-- And the last one had some arcane difference I have no idea about -->
+
 <H1>This is a placeholder website for when I need to duckduckgo
 stuff on stream</H1>
 
   https://twitch.tv/rainbow_punk_treant
+
 
 
     <div class="container" draggable="true">
